--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,15 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MapViewImageActivity"
+            android:theme="@style/WithBar">
+        </activity>
+        <activity
+            android:name=".ScheduleDetailActivity"
             android:theme="@style/WithBar">
 
         </activity>
