--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/backend'] } }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
-    compile ('com.github.florent37:materialviewpager:1.1.0@aar'){
+    compile('com.github.florent37:materialviewpager:1.1.0@aar') {
         transitive = true
     }
 
