JSONManager basic functionality needs error handling and testing, BackendManager Modular and tested on Events, can be applied to rest

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,5 @@ dependencies {
     compile('com.github.florent37:materialviewpager:1.1.0@aar') {
         transitive = true
     }
-
+    compile project(':json-simple-1.1')
 }
