added map details and schedule details fragment, now have to figure out how to populate the fragments correctly, and then add camera functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity.MapViewImageActivity"
+            android:name=".Activity.MapDetailActivity"
             android:theme="@style/WithBar">
         </activity>
         <activity
