--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,8 @@
                 <category android:name="co.hackingedu.ro" />
             </intent-filter>
         </receiver>
+        <meta-data android:name="com.parse.push.notification_icon"
+            android:resource="@mipmap/ic_launcher"/>
     </application>
 
 </manifest>
