--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <permission android:protectionLevel="signature"
         android:name="co.hackingedu.ro.permission.C2D_MESSAGE" />
     <application
+        android:name="co.hackingedu.ro.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -69,7 +70,7 @@
             </intent-filter>
         </receiver>
         <meta-data android:name="com.parse.push.notification_icon"
-            android:resource="@mipmap/ic_launcher"/>
+            android:resource="@drawable/logo_white"/>
     </application>
 
 </manifest>
