camera code from joseph

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         </activity>
 
         <activity
-            android:name=".Activity.Camera"
+            android:name=".Activity.CameraActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
         </activity>
