--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,21 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://maven.fabric.io/repo' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+    maven { url 'https://maven.fabric.io/repo' }
+}
+
 apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -32,5 +49,13 @@ dependencies {
     dependencies {
         compile 'com.parse.bolts:bolts-android:1.+'
         compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    }
+    compile('com.twitter.sdk.android:twitter:1.8.0@aar') {
+        transitive = true;
+    }
+    dependencies {
+        compile('com.twitter.sdk.android:twitter-core:1.5.0@aar') {
+            transitive = true;
+        }
     }
 }
